# api_aiohttp_mcc

./: .gitignore  CHANGELOG.md  README.md  env.yaml  main.py  pyproject.toml  test_main.py
dev_bin/: README.md  rewrite_log.py  write_env.py
documentation/: API_INSTRUCTION.md  DB_CREATE_SCRIPTS.md  DB_SOURCE.md  README.md
documentation/source/: README.md
documentation/source/mcc/: README.md  mcc_codes_ru.csv  mcc_list.txt  merge_git_ru.py
logs/: README.md
migrations/: README.md  migrations.py  sql_scripts.py
tests/: README.md  correct_datas.py  test_cases.py  test_models.py  utils.py
